endpoints to work with cart and add docker file
